<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.jujin8.freeway</groupId>
        <artifactId>freeway-ext</artifactId>
        <version>1.3.6-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>freeway-benchmark</artifactId>
    <name>Freeway :: Benchmark</name>
    <description>Performance benchmarks for freeway-http</description>

    <properties>
        <skipPublishing>true</skipPublishing>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.jujin8.freeway</groupId>
            <artifactId>freeway-http</artifactId>
        </dependency>
        <dependency>
            <groupId>com.jujin8.freeway</groupId>
            <artifactId>freeway-boot</artifactId>
        </dependency>
        <dependency>
            <groupId>com.jujin8.freeway</groupId>
            <artifactId>freeway-db</artifactId>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
        </dependency>
        <dependency>
            <groupId>com.jujin8.freeway</groupId>
            <artifactId>freeway-http-undertow</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.jujin8.freeway</groupId>
            <artifactId>freeway-http-jetty</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>io.undertow</groupId>
            <artifactId>undertow-core</artifactId>
        </dependency>
        <dependency>
            <groupId>io.github.robaho</groupId>
            <artifactId>httpserver</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-generator-annprocess</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.openjdk.jmh</groupId>
                            <artifactId>jmh-generator-annprocess</artifactId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.5.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.1</version>
                <executions>
                    <execution>
                        <id>benchmark-classpath</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>build-classpath</goal>
                        </goals>
                        <configuration>
                            <outputFile>${project.build.directory}/benchmark.classpath</outputFile>
                            <pathSeparator>${path.separator}</pathSeparator>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
